- Added polling keyboard driver
git-svn-id: svn+ssh://centos/home/fedora-home/external-backup/gkolpin/src/SVNROOT@262 16ae21f4-ed28-0410-908c-9a1054b79e18

--- a/.bochsrc
+++ b/.bochsrc
@@ -656,7 +656,7 @@ keyboard_mapping: enabled=0, map=
 # Examples:
 #   keyboard_type: mf
 #=======================================================================
-#keyboard_type: mf
+keyboard_type: mf
 
 #=======================================================================
 # USER_SHORTCUT:
